Font styles for header and letter body

--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/index.html
@@ -36,13 +36,13 @@
       </section>
 
       <p>
-        {{ _('Thunderbird’s mission is to give you a private, customizable, and robust email experience, while keeping it free and accessible for users around the world.')}}
+        {{ _('Thunderbird’s mission is to give <b>you</b> a private, customizable, and robust email experience, while keeping it free and accessible for users around the world.')}}
       </p>
       <p>
-        {{ _('All of our funding comes from users like you. Your support drives development, safeguards our independence, and keeps Thunderbird a powerful, open-source alternative to Big Tech.')}}
+        {{ _('<b>All of our funding comes from users like you.</b> Your support drives development, safeguards our independence, and keeps Thunderbird a powerful, open-source alternative to Big Tech.')}}
       </p>
       <p>
-        {{ _('Your contributions make a huge difference. We truly can’t do this without you.')}}
+        {{ _('Your contributions make a huge difference. <b>We truly can’t do this without you.</b>')}}
       </p>
       <div class="heart-container">
         <div class="left-lines">
