Create and style the Mozilla footer

--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/index.html
@@ -61,3 +61,6 @@
     </div>
   </section>
 {% endblock %}
+{% block site_footer %}
+  {% include 'includes/base/moz-footer.html' %}
+{% endblock %}
