Draft waitlist form page

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -87,30 +87,34 @@
 
 
 {% block reasons %}
-<header>{{ _('Made for You') }}</header>
-<div class="reason">
-  <div class="reason-content">
-    <h3 class="reason-title">{{ _('Open Source') }}</h3>
-    <p>
-      {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting') }}
-    </p>
-  </div>
-</div>
-<div class="reason">
-  <div class="reason-content">
-    <h3 class="reason-title">{{ _('User Focused') }}</h3>
-    <p>
-      {{ _('Thunderbird Pro is part of our mission to help you communicate, collaborate, and connect freely. The Thunderbird Desktop and Mobile apps remain the core of how we offer these benefits and your subscription helps us make them even better.') }}
-    </p>
-  </div>
-</div>
-<div class="reason">
-  <div class="reason-content">
-    <h3 class="reason-title">{{ _('Freedom Driven') }}</h3>
-    <p>
-      {{ _('Money isn\'t our mission, it is the means to bring freedom and productivity to as many people as possible. Freely licensed software, open source code, and open standards liberate you and remain at the heart of Thunderbird.') }}
-    </p>
-  </div>
+<div class="top-level">
+  <section id="reasons" class="primary-block">
+    <header>{{ _('Made for You') }}</header>
+    <div class="reason">
+      <div class="reason-content">
+        <h3 class="reason-title">{{ _('Open Source') }}</h3>
+        <p>
+          {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting') }}
+        </p>
+      </div>
+    </div>
+    <div class="reason">
+      <div class="reason-content">
+        <h3 class="reason-title">{{ _('User Focused') }}</h3>
+        <p>
+          {{ _('Thunderbird Pro is part of our mission to help you communicate, collaborate, and connect freely. The Thunderbird Desktop and Mobile apps remain the core of how we offer these benefits and your subscription helps us make them even better.') }}
+        </p>
+      </div>
+    </div>
+    <div class="reason">
+      <div class="reason-content">
+        <h3 class="reason-title">{{ _('Freedom Driven') }}</h3>
+        <p>
+          {{ _('Money isn\'t our mission, it is the means to bring freedom and productivity to as many people as possible. Freely licensed software, open source code, and open standards liberate you and remain at the heart of Thunderbird.') }}
+        </p>
+      </div>
+    </div>
+  </section>
 </div>
 {% endblock %}
 
