--- a/sites/tb.pro/waitlist.html
+++ b/sites/tb.pro/waitlist.html
@@ -15,9 +15,14 @@
 
 {% block overview %}
 <div id="waitlist-form" class="top-level">
-  <h2 id="form-header">Join the Waitlist</h2>
+  <h2 id="form-header">{{ _('Join the Waitlist') }}</h2>
+  <div id="waitlist-welcome">
+    <p>{{ _('Thunderbird Pro is currently in a closed Early Bird release and available by invitation only.
+Join the waitlist to stay informed on our progress and get early access as we expand availability.Thunderbird Pro is currently in a closed Early Bird beta and available by invitation only.
+Join the waitlist to stay informed on our progress and get early access as we expand availability.')}}</p>
+  </div>
   <div class="form-container">
-    <form action=""
+    <form action="https://thunderbird.us12.list-manage.com/subscribe/post"
           method="post"
           id="mc-embedded-subscribe-form"
           name="mc-embedded-subscribe-form"
@@ -27,29 +32,40 @@
           >
 
       <div class="form-elements">
-        <label class="wrapper" for="first_name" id="first_name">
-          <span class="label">First name
+        <input type="hidden" name="u" value="f8051cc8637cf3ff79661f382">
+        <input type="hidden" name="id" value="a508104cf8">
+        <input type="hidden" name="ht" value="e6da924628bffe67fef3d05a9cfe08fb1a9eccab:MTc2Mjc5MjExMC4yMDMz">
+
+        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+          <label for="b_name">Name: </label>
+          <input type="text" name="b_name" tabindex="-1" value="" placeholder="Freddie" id="b_name">
+
+          <label for="b_email">Email: </label>
+          <input type="email" name="b_email" tabindex="-1" value="" placeholder="youremail@gmail.com" id="b_email">
+
+          <label for="b_comment">Comment: </label>
+          <textarea name="b_comment" tabindex="-1" placeholder="Please comment" id="b_comment"></textarea>
+        </div>
+
+        <label class="wrapper" for="email" id="MERGE0">
+          <span class="label">{{ _('Email address')}}
             <span class="required">*</span>
           </span>
           <span class="tbpro-input-wrapper">
-            <input class="tbpro-input-element" type="text" id="first_name" name="first_name" required="" autofocus="">
-          </span>
-        </label>
-        <label class="wrapper" for="last_name" id="last_name">
-          <span class="label">Last name
-            <span class="required">*</span>
-          </span>
-          <span class="tbpro-input-wrapper">
-            <input class="tbpro-input-element" type="text" id="last_name" name="last_name" required="" autofocus="">
+            <input class="tbpro-input-element" type="text" id="MERGE0" name="MERGE0" required autofocus="">
           </span>
         </label>
 
-        <label class="wrapper" for="email" id="email">
-          <span class="label">Email address
-            <span class="required">*</span>
-          </span>
+        <label class="wrapper" for="first_name" id="MERGE1">
+          <span class="label">{{ _('First name') }}</span>
           <span class="tbpro-input-wrapper">
-            <input class="tbpro-input-element" type="text" id="email" name="email" required="" autofocus="">
+            <input class="tbpro-input-element" type="text" id="MERGE1" name="MERGE1" autofocus="">
+          </span>
+        </label>
+        <label class="wrapper" for="last_name" id="MERGE2">
+          <span class="label">{{ _('Last name')}}</span>
+          <span class="tbpro-input-wrapper">
+            <input class="tbpro-input-element" type="text" id="MERGE2" name="MERGE2" autofocus="">
           </span>
         </label>
 
