Confirm working waitlist form

--- a/sites/tb.pro/waitlist.html
+++ b/sites/tb.pro/waitlist.html
@@ -22,7 +22,7 @@ Join the waitlist to stay informed on our progress and get early access as we ex
 Join the waitlist to stay informed on our progress and get early access as we expand availability.')}}</p>
   </div>
   <div class="form-container">
-    <form action="https://thunderbird.us12.list-manage.com/subscribe/post"
+    <form action="https://thunderbird.us12.list-manage.com/subscribe/post?u=f8051cc8637cf3ff79661f382&amp;id=a508104cf8&amp;f_id=00caaae0f0"
           method="post"
           id="mc-embedded-subscribe-form"
           name="mc-embedded-subscribe-form"
@@ -31,40 +31,30 @@ Join the waitlist to stay informed on our progress and get early access as we ex
           >
 
       <div class="form-elements">
-        <input type="hidden" name="u" value="f8051cc8637cf3ff79661f382">
-        <input type="hidden" name="id" value="a508104cf8">
-        <input type="hidden" name="ht" value="e6da924628bffe67fef3d05a9cfe08fb1a9eccab:MTc2Mjc5MjExMC4yMDMz">
-
         <div style="position: absolute; left: -5000px;" aria-hidden="true">
-          <label for="b_name">Name: </label>
-          <input type="text" name="b_name" tabindex="-1" value="" placeholder="Freddie" id="b_name">
-
-          <label for="b_email">Email: </label>
-          <input type="email" name="b_email" tabindex="-1" value="" placeholder="youremail@gmail.com" id="b_email">
-
-          <label for="b_comment">Comment: </label>
-          <textarea name="b_comment" tabindex="-1" placeholder="Please comment" id="b_comment"></textarea>
+          <input type="hidden" name="tags" value="10526643">
+          <input type="text" name="b_f8051cc8637cf3ff79661f382_a508104cf8" tabindex="-1" value="">
         </div>
 
-        <label class="wrapper" for="MERGE0">
+        <label class="wrapper" for="mce-EMAIL">
           <span class="label">{{ _('Email address')}}
             <span class="required">*</span>
           </span>
           <span class="tbpro-input-wrapper">
-            <input class="tbpro-input-element" type="text" id="MERGE0" name="MERGE0" required autofocus="">
+            <input type="email" name="EMAIL" class="tbpro-input-element" id="mce-EMAIL" value="" autofocus="" required="">
           </span>
         </label>
 
-        <label class="wrapper" for="MERGE1">
+        <label class="wrapper" for="mce-FNAME">
           <span class="label">{{ _('First name') }}</span>
           <span class="tbpro-input-wrapper">
-            <input class="tbpro-input-element" type="text" id="MERGE1" name="MERGE1">
+            <input class="tbpro-input-element" type="text" id="mce-FNAME" name="FNAME">
           </span>
         </label>
-        <label class="wrapper" for="MERGE2">
+        <label class="wrapper" for="mce-LNAME">
           <span class="label">{{ _('Last name')}}</span>
           <span class="tbpro-input-wrapper">
-            <input class="tbpro-input-element" type="text" id="MERGE2" name="MERGE2">
+            <input class="tbpro-input-element" type="text" id="mce-LNAME" name="LNAME">
           </span>
         </label>
 
