--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/donate/index.html
@@ -5,12 +5,12 @@
  # This is an exact replicate of nov24/index.html but without the base_url set in donate_button.
  # This actually pulls up the form!
  #}
-{% set active_page = "appeal-dec24" %}
+{% set active_page = "appeal-nov25" %}
 
 {# For donation url generation #}
-{% set fru_form_id = 'eoy2024' %}
-{% set utm_campaign = 'dec24_appeal' %}
+{% set fru_form_id = 'eoy2025' %}
+{% set utm_campaign = 'nov25_appeal' %}
 {% set donation_base_url = None %}
 
 {# Just include previous page instead of duplicating it all #}
-{% extends "thunderbird/128.0/dec24/index.html" %}
+{% extends "thunderbird/140.0/nov25a/index.html" %}
