--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/donate/index.html
@@ -8,9 +8,9 @@
 {% set active_page = "appeal-dec24" %}
 
 {# For donation url generation #}
-{% set fru_form_id = 'eoy2024' %}
-{% set utm_campaign = 'dec24_appeal' %}
+{% set fru_form_id = 'eoy2025' %}
+{% set utm_campaign = 'nov25_appeal' %}
 {% set donation_base_url = None %}
 
 {# Just include previous page instead of duplicating it all #}
-{% extends "thunderbird/128.0/dec24/index.html" %}
+{% extends "thunderbird/140.0/nov25b/index.html" %}
