--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/index.html
@@ -10,10 +10,10 @@
 {% set active_page = "appeal-dec24" %}
 
 {# For donation url generation #}
-{% set fru_form_id = fru_form_id|default('eoy2024') %}
-{% set utm_campaign = utm_campaign|default('dec24_appeal') %}
+{% set fru_form_id = fru_form_id|default('eoy2025') %}
+{% set utm_campaign = utm_campaign|default('nov25_appeal') %}
 {% set utm_source = utm_source|default('thunderbird-client') %}
-{% set donation_base_url = donation_base_url|default(url('updates.128.appeal.dec24.donate')) %}
+{% set donation_base_url = donation_base_url|default(url('updates.140.appeal.nov25b.donate')) %}
 
 {% extends "includes/base/base.html" %}
 {% from 'includes/macros/donate-button.html' import donate_button with context %}
