Replace placeholder file size limit with 20GB (#1004)

--- a/sites/tb.pro/send/index.html
+++ b/sites/tb.pro/send/index.html
@@ -42,7 +42,7 @@
       <div class="overview-card overview-card-2">
         <header>{{ _('Massive File Support') }}</header>
         <p>
-          {{ _('Share files up to [size limit] without worrying about attachment restrictions. Whether it\'s high-resolution photos, design files, or project archives, Send handles what traditional email can\'t, while maintaining the familiar attachment experience in Thunderbird Desktop.') }}
+          {{ _('Share files up to 20GB without worrying about attachment restrictions. Whether it\'s high-resolution photos, design files, or project archives, Send handles what traditional email can\'t, while maintaining the familiar attachment experience in Thunderbird Desktop.') }}
         </p>
         <div class="overview-image"></div>
       </div>
