On all tb.pro pages, update "Open Source" section, add period. (#1008)

--- a/sites/tb.pro/appointment/index.html
+++ b/sites/tb.pro/appointment/index.html
@@ -66,7 +66,7 @@
       <div class="reason-content">
         <h3 class="reason-title">{{ _('Open Source') }}</h3>
         <p>
-          {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting') }}
+          {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting.') }}
         </p>
       </div>
     </div>
