tb.pro landing page - update product descriptions in bentos

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="card-body">
         <p>
-          {{ _('Send/receive emails with a privacy protecting host based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.') }}
+          {{ _('Send/receive emails with a privacy protecting host and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.') }}
         </p>
       </div>
     </div>
@@ -52,7 +52,7 @@
       </div>
       <div class="card-body">
         <p>
-{{ _('Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.') }}
+{{ _('Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Powered by open standards and compatible with Google Calendar and CalDAV. You can now schedule like a pro.') }}
         </p>
       </div>
     </div>
