Update tb.pro marketing copy and adjust bento styles (Issues #1004, #1008, #1010) (PR #1012)
* Replace placeholder file size limit with 20GB (#1004)

* On all tb.pro pages, update "Open Source" section, add period. (#1008)

* tb.pro landing page - update product descriptions in bentos (#1008)

* Adjust layout of 2nd and 3rd tb.pro homepage bentos (#1010)

* Adjust whitespace for thundermail bentos on tb.pro (#1010)

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="card-body">
         <p>
-          {{ _('Send/receive emails with a privacy protecting host based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.') }}
+          {{ _('Send/receive emails with a privacy protecting host and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.') }}
         </p>
       </div>
     </div>
@@ -52,7 +52,7 @@
       </div>
       <div class="card-body">
         <p>
-{{ _('Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.') }}
+{{ _('Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Powered by open standards and compatible with Google Calendar and CalDAV. You can now schedule like a pro.') }}
         </p>
       </div>
     </div>
@@ -94,7 +94,7 @@
       <div class="reason-content">
         <h3 class="reason-title">{{ _('Open Source') }}</h3>
         <p>
-          {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting') }}
+          {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting.') }}
         </p>
       </div>
     </div>
