--- a/sites/tb.pro/send/index.html
+++ b/sites/tb.pro/send/index.html
@@ -42,7 +42,7 @@
       <div class="overview-card overview-card-2">
         <header>{{ _('Massive File Support') }}</header>
         <p>
-          {{ _('Share files up to [size limit] without worrying about attachment restrictions. Whether it\'s high-resolution photos, design files, or project archives, Send handles what traditional email can\'t, while maintaining the familiar attachment experience in Thunderbird Desktop.') }}
+          {{ _('Share files up to 20GB without worrying about attachment restrictions. Whether it\'s high-resolution photos, design files, or project archives, Send handles what traditional email can\'t, while maintaining the familiar attachment experience in Thunderbird Desktop.') }}
         </p>
         <div class="overview-image"></div>
       </div>
@@ -66,7 +66,7 @@
         <div class="reason-content">
           <h3 class="reason-title">{{ _('Open Source') }}</h3>
           <p>
-            {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting') }}
+            {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting.') }}
           </p>
         </div>
       </div>
