Adjust FRU form ids to nov25 for the nov25 appeal

--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/donate/index.html
@@ -8,7 +8,7 @@
 {% set active_page = "appeal-dec24" %}
 
 {# For donation url generation #}
-{% set fru_form_id = 'eoy2025' %}
+{% set fru_form_id = 'nov25' %}
 {% set utm_campaign = 'nov25_appeal' %}
 {% set donation_base_url = None %}
 
