--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/index.html
@@ -10,7 +10,7 @@
 {% set active_page = "appeal-nov25" %}
 
 {# For donation url generation #}
-{% set fru_form_id = fru_form_id|default('eoy2025') %}
+{% set fru_form_id = fru_form_id|default('nov25') %}
 {% set utm_campaign = utm_campaign|default('nov25_appeal') %}
 {% set utm_source = utm_source|default('thunderbird-client') %}
 {% set donation_base_url = donation_base_url|default(url('updates.140.appeal.nov25a.donate')) %}
