--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/donate/index.html
@@ -9,6 +9,7 @@
 
 {# For donation url generation #}
 {% set fru_form_id = 'nov25' %}
+{% set utm_content = 'cta_b' %}
 {% set utm_campaign = 'nov25_appeal' %}
 {% set donation_base_url = None %}
 
