--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/index.html
@@ -11,8 +11,9 @@
 
 {# For donation url generation #}
 {% set fru_form_id = fru_form_id|default('nov25') %}
+{% set utm_content = utm_content|default('cta_b') %}
 {% set utm_campaign = utm_campaign|default('nov25_appeal') %}
-{% set utm_source = utm_source|default('thunderbird-client') %}
+{% set utm_source = utm_source|default('in_app') %}
 {% set donation_base_url = donation_base_url|default(url('updates.140.appeal.nov25b.donate')) %}
 
 {% extends "includes/base/base.html" %}
@@ -41,7 +42,7 @@
 {% endblock %}
 {% block content %}
   <section id="donate-button-container">
-    {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, source=utm_source, base_url=donation_base_url) }}
+    {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, source=utm_source, content=utm_content, base_url=donation_base_url) }}
   </section>
   <section id="appeal-body">
     <div class="letter-container font-xl">
