--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25a/donate/index.html
@@ -12,6 +12,8 @@
 {% set utm_content = 'cta_a' %}
 {% set utm_campaign = 'nov25_appeal' %}
 {% set donation_base_url = None %}
+{# We want to show the redirect notice here as this is where the modal will actually open up. #}
+{% set disable_donation_blocked_notice = False %}
 
 {# Just include previous page instead of duplicating it all #}
 {% extends "thunderbird/140.0/nov25a/index.html" %}
