Simplify fix for subscription plan repeating. (#1019)

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -129,6 +129,5 @@
   </p>
 </div>
 {% from 'includes/macros/subscription-plan.html' import subscription_plan %}
-{% set plan = subscription_plans.early_bird %}
-{{ subscription_plan(_(plan.name), _(plan.description), plan.price, _(plan.period), _(plan.cta_label), url('tbpro.waitlist'), plan.mail_storage, plan.send_storage, plan.num_domains, plan.num_email_addresses) }}
+{{ subscription_plan(_(default_plan.name), _(default_plan.description), default_plan.price, _(default_plan.period), _(default_plan.cta_label), url('tbpro.waitlist'), default_plan.mail_storage, default_plan.send_storage, default_plan.num_domains, default_plan.num_email_addresses) }}
 {% endblock %}
