Rename dirs to indicate first of two Dec 25 appeals

--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1c/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1c/donate/index.html
@@ -16,4 +16,4 @@
 {% set disable_donation_blocked_notice = False %}
 
 {# Just include previous page instead of duplicating it all #}
-{% extends "thunderbird/140.0/dec25c/index.html" %}
+{% extends "thunderbird/140.0/dec25-1c/index.html" %}
