--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1b/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1b/donate/index.html
@@ -16,4 +16,4 @@
 {% set disable_donation_blocked_notice = False %}
 
 {# Just include previous page instead of duplicating it all #}
-{% extends "thunderbird/140.0/dec25b/index.html" %}
+{% extends "thunderbird/140.0/dec25-1b/index.html" %}
