Add final headlines and copy for Dec-1a, Dec-1b, and Dec-1c appeals

--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1a/index.html
@@ -29,8 +29,8 @@
 
 {% block content %}
   <section id="appeal-body">
-    <h1 id="appeal-heading" aria-label="{{ _('Thank YOU. You Help Us Soar') }}">
-      {{ _('Thank YOU <span>You Help Us Soar</span>') }}
+    <h1 id="appeal-heading" aria-label="{{ _('Only 3% of users SUPPORT THUNDERBIRD') }}">
+      {{ _('Only 3% of users <span>SUPPORT THUNDERBIRD</span>') }}
     </h1>
 
     <div id="appeal-letter" class="letter-container font-xl">
@@ -39,13 +39,13 @@
       </section>
       <div id="letter-contents">
         <p>
-          {{ _('Thunderbird’s mission is to give <b>you</b> a private, customizable, and robust email experience, while keeping it free and accessible for users around the world.')}}
+          {{ _('Thunderbird is built by a small, passionate team along with a global community that believes in the <b>power of privacy, freedom and open source</b>. Your support pays for secure servers, robust infrastructure and the dedicated team of people who make it all happen.')}}
         </p>
         <p>
-          {{ _('<b>All of our funding comes from users like you.</b> Your support drives development, safeguards our independence, and keeps Thunderbird a powerful, open-source alternative to Big Tech.')}}
+          {{ _('<b>Together we can continue to prove that privacy respecting technology can compete and thrive.</b>')}}
         </p>
         <p>
-          {{ _('Your contributions make a huge difference. <b>We truly can’t do this without you.</b>')}}
+          {{ _('If you love using Thunderbird, please consider supporting it.')}}
         </p>
         <div class="heart-container">
           <div class="left-lines">
