--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1b/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1b/donate/index.html
@@ -8,9 +8,9 @@
 {% set active_page = "appeal-nov25" %}
 
 {# For donation url generation #}
-{% set fru_form_id = 'nov25' %}
-{% set utm_content = 'cta_a' %}
-{% set utm_campaign = 'nov25_appeal' %}
+{% set fru_form_id = 'dec25-1' %}
+{% set utm_content = 'cta_b' %}
+{% set utm_campaign = 'dec25_appeal-1' %}
 {% set donation_base_url = None %}
 {# We want to show the redirect notice here as this is where the modal will actually open up. #}
 {% set disable_donation_blocked_notice = False %}
