--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1b/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1b/index.html
@@ -10,11 +10,11 @@
 {% set active_page = "appeal-nov25" %}
 
 {# For donation url generation #}
-{% set fru_form_id = fru_form_id|default('nov25') %}
-{% set utm_content = utm_content|default('cta_a') %}
-{% set utm_campaign = utm_campaign|default('nov25_appeal') %}
+{% set fru_form_id = fru_form_id|default('dec25-1') %}
+{% set utm_content = utm_content|default('cta_b') %}
+{% set utm_campaign = utm_campaign|default('dec25_appeal-1') %}
 {% set utm_source = utm_source|default('in_app') %}
-{% set donation_base_url = donation_base_url|default(url('updates.140.appeal.nov25a.donate')) %}
+{% set donation_base_url = donation_base_url|default(url('updates.140.appeal.dec25-1b.donate')) %}
 {# Disable the donation banner on this redirect page, we set this to false in the actual donation page. #}
 {% set disable_donation_blocked_notice = disable_donation_blocked_notice|default(True) %}
 
