Appeal page titles match headlines

--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1a/index.html
@@ -25,11 +25,11 @@
   <link href="{{ static('css/appeal-nov25-style.css') }}" rel="stylesheet" type="text/css"/>
 
 {% endblock %}
-{% block page_title %}{{ _('Thank YOU! You Help Us Soar') }}{% endblock %}
+{% block page_title %}{{ _('Only 3% of users support Thunderbird') }}{% endblock %}
 
 {% block content %}
   <section id="appeal-body">
-    <h1 id="appeal-heading" aria-label="{{ _('Only 3% of users SUPPORT THUNDERBIRD') }}">
+    <h1 id="appeal-heading" aria-label="{{ _('Only 3% of users support Thunderbird') }}">
       {{ _('Only 3% of users <span>SUPPORT THUNDERBIRD</span>') }}
     </h1>
 
