--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1b/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1b/index.html
@@ -25,7 +25,7 @@
   <link href="{{ static('css/appeal-nov25-style.css') }}" rel="stylesheet" type="text/css"/>
 
 {% endblock %}
-{% block page_title %}{{ _('Thank YOU! You Help Us Soar') }}{% endblock %}
+{% block page_title %}{{ _('Help Keep Thunderbird Alive') }}{% endblock %}
 
 {% block content %}
   <section id="appeal-body">
