Draft of styles for Dec 25 1a and 1b

--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1a/index.html
@@ -22,7 +22,7 @@
 {% from 'includes/macros/donate-button.html' import donate_button with context %}
 
 {% block base_css %}
-  <link href="{{ static('css/appeal-nov25-style.css') }}" rel="stylesheet" type="text/css"/>
+  <link href="{{ static('css/appeal-dec25-1-style.css') }}" rel="stylesheet" type="text/css"/>
 
 {% endblock %}
 {% block page_title %}{{ _('Only 3% of users support Thunderbird') }}{% endblock %}
@@ -62,6 +62,9 @@
         </div>
         <p class="closing-text">{{ _('The Thunderbird Team') }}</p>
       </div>
+    </div>
+    <div id="illustration-credit">
+      <p>{{ _('Illustration by') }} Michaela Martin</p>
     </div>
   </section>
 {% endblock %}
