Update title styles for dec25 appeal (1a, 1b, and 1c)

--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1a/index.html
@@ -23,13 +23,12 @@
 
 {% block base_css %}
   <link href="{{ static('css/appeal-dec25-1-style.css') }}" rel="stylesheet" type="text/css"/>
-
 {% endblock %}
 {% block page_title %}{{ _('Only 3% of users support Thunderbird') }}{% endblock %}
 
 {% block content %}
   <section id="appeal-body">
-    <h1 id="appeal-heading" aria-label="{{ _('Only 3% of users support Thunderbird') }}">
+    <h1 id="appeal-heading" class="with-lowercase" aria-label="{{ _('Only 3% of users support Thunderbird') }}">
       {{ _('Only 3% of users <span>SUPPORT THUNDERBIRD</span>') }}
     </h1>
 
