--- a/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1c/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/dec25-1c/index.html
@@ -22,8 +22,7 @@
 {% from 'includes/macros/donate-button.html' import donate_button with context %}
 
 {% block base_css %}
-  <link href="{{ static('css/appeal-nov25-style.css') }}" rel="stylesheet" type="text/css"/>
-
+  <link href="{{ static('css/appeal-dec25-1c-style.css') }}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block page_title %}{{ _('Help Keep Thunderbird Alive!') }}{% endblock %}
 
